--- a/html/admin-dashboard.html
+++ b/html/admin-dashboard.html
@@ -84,7 +84,12 @@
 
     <!-- CONTENT -->
     <div class="content">
-        <h1>Listes des films</h1>
+        <div class="d-flex justify-content-between align-items-center">
+            <h1>Listes des films</h1>
+            <div>
+                <i class="fas fa-power-off"></i>
+            </div>
+        </div>
         <hr>
         <div>
             <button class="btn btn-warning px-5 mt-3">Nouvelle film</button>
