Finish html page

--- a/html/new-game.html
+++ b/html/new-game.html
@@ -91,7 +91,7 @@
     <!-- CONTENT -->
     <div class="content">
         <div class="d-flex justify-content-between align-items-center">
-            <h1>Insertion nouvelle film</h1>
+            <h1>Insertion nouveau jeux</h1>
             <div>
                 <i class="fas fa-power-off"></i>
             </div>
@@ -103,38 +103,28 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="mb-3">
-                        <label for="" class="form-label">Titre du film</label>
+                        <label for="" class="form-label">Titre du jeux</label>
                         <input type="text" class="form-control">
                     </div>
                     <div class="mb-3">
-                        <label for="" class="form-label">Catégorie</label>
+                        <label for="" class="form-label">Plateforme</label>
                         <select name="" id="" class="form-select">
-                            <option value="">Série</option>
-                            <option value="">Film</option>
+                            <option value="">PC</option>
+                            <option value="">PS5</option>
                         </select>
                     </div>
                     <div class="mb-3">
                         <label for="" class="form-label">Année de sortie</label>
                         <input type="number" class="form-control" value="2024">
                     </div>
-                    <div class="mb-3 row">
-                        <div class="col-md-6">
-                            <label for="" class="form-label">Saison</label>
-                            <input type="number" class="form-control">
-                        </div>
-                        <div class="col-md-6">
-                            <label for="" class="form-label">Nombre episode</label>
-                            <input type="number" class="form-control">
-                        </div>
-                    </div>
                     <div class="mb-3">
                         <label for="" class="form-label">Synopsis</label>
-                        <textarea name="" class="form-control" id="" cols="30" rows="5">
+                        <textarea name="" class="form-control" id="" cols="30" rows="9">
                         </textarea>
                     </div>
                     <input type="button" value="Enregistrer" class="mt-2 w-100 btn btn-warning">
                 </div>
-                <div class="col-md-6 ps-5">
+                <div class="col-md-6">
                     <div class="mb-3">
                         <label for="" class="form-label">Couverture</label>
                         <input type="file" name="" class="form-control" id="">
@@ -144,61 +134,20 @@
                         <input type="file" name="" class="form-control" id="">
                     </div>
                     <div class="mb-3">
-                        <label for="" class="form-label">Genre du film</label>
-                        <div class="row ps-3">
-                            <div class="form-check col-md-3">
-                                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
-                                <label class="form-check-label" for="flexCheckChecked">
-                                    Comédie
-                                </label>
-                            </div>
-                            <div class="form-check col-md-3">
-                                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
-                                <label class="form-check-label" for="flexCheckChecked">
-                                    Action
-                                </label>
-                            </div>
-                            <div class="form-check col-md-3">
-                                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
-                                <label class="form-check-label" for="flexCheckChecked">
-                                    Histoire
-                                </label>
-                            </div>
-                            <div class="form-check col-md-3">
-                                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
-                                <label class="form-check-label" for="flexCheckChecked">
-                                    Frisson
-                                </label>
-                            </div>
-                            <div class="form-check col-md-3">
-                                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
-                                <label class="form-check-label" for="flexCheckChecked">
-                                    Amour
-                                </label>
-                            </div>
-                            <div class="form-check col-md-3">
-                                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
-                                <label class="form-check-label" for="flexCheckChecked">
-                                    Policier
-                                </label>
-                            </div>
-                        </div>
+                        <label for="" class="form-label">Taille</label>
+                        <input type="text" class="form-control" value="14 Go ROM">
                     </div>
                     <div class="mb-3">
-                        <label for="" class="form-label">Studio</label>
-                        <select name="studios[]" id="studios" class="form-select" multiple>
-                            <option value="">Pixar Studio</option>
-                            <option value="">Baobab Play</option>
-                            <option value="">Hollywood</option>
-                        </select>
+                        <label for="" class="form-label">RAM</label>
+                        <input type="text" class="form-control" value="8 Go RAM">
                     </div>
                     <div class="mb-3">
-                        <label for="" class="form-label">Acteur</label>
-                        <select name="acteurs[]" id="acteurs" class="form-control" multiple>
-                            <option value="">Rajao</option>
-                            <option value="">Jackie Chan</option>
-                            <option value="">John Cena</option>
-                        </select>
+                        <label for="" class="form-label">Processeur</label>
+                        <input type="text" class="form-control" value="Core i7">
+                    </div>
+                    <div class="mb-3">
+                        <label for="" class="form-label">Carte graphique</label>
+                        <input type="text" class="form-control" value="NVDIA GeForce">
                     </div>
                 </div>
             </div>
