--- a/html/logiciel-list.html
+++ b/html/logiciel-list.html
@@ -89,14 +89,14 @@
     <!-- CONTENT -->
     <div class="content">
         <div class="d-flex justify-content-between align-items-center">
-            <h1>Listes des films</h1>
+            <h1>Listes des logiciels</h1>
             <div>
                 <i class="fas fa-power-off"></i>
             </div>
         </div>
         <hr>
         <div>
-            <a href="./new-film.html" class="btn btn-warning px-5 mt-3">Nouvelle film</a>
+            <a href="./new-logiciel.html" class="btn btn-warning px-5 mt-3">Nouveau logiciel</a>
         </div>
         <div class="mt-3">
             <form action="">
@@ -107,56 +107,33 @@
             </form>
         </div>
 
-        <!-- FILTRE PAR CATÉGORIE -->
-        <div class="mt-4 categorie-filter">
-            <button class="btn btn-secondary btn-sm">All</button>
-            <button class="btn btn-outline-secondary btn-sm">Film</button>
-            <button class="btn btn-outline-secondary btn-sm">Série</button>
-            <button class="btn btn-outline-secondary btn-sm">Animé</button>
-        </div>
-
-        <!-- MODAL A PROPOS D'UN FILM -->
+        <!-- MODAL A PROPOS D'UN LOGICIEL -->
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog film-about mw-50 modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h1 class="modal-title text-warning fs-5" id="exampleModalLabel">A props du film</h1>
+                        <h1 class="modal-title text-warning fs-5" id="exampleModalLabel">A props du logiciel</h1>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body row">
                         <div class="col-md-6 ps-5">
                             <div class="title d-flex justify-content-between align-items-center">
-                                <h4 class="mb-0">Tech Mavericks <br> <span class="annee">2024</span></h4>
+                                <h4 class="mb-0">Autocad 2023</h4>
                                 <button class="btn btn-outline-warning btn-sm"><i
                                         class="fas fa-compact-disc"></i></button>
                             </div>
 
                             <div class="synopsis mt-4">
-                                Dunkirk est un film de guerre réalisé par Christopher Nolan, sorti en 2017. Il retrace
-                                l'évacuation de Dunkerque pendant la Seconde Guerre mondiale. Le film est divisé en
-                                trois
-                                parties, chacune se déroulant sur terre, dans les airs et sur mer, et suivant différents
-                                personnages.
-                                Sur terre, des soldats britanniques tentent de survivre sur la plage de Dunkerque,
-                                encerclés.
+                                Un très bon jeu de strategie, mettant en oeuvre des guerres militaire et autre chose.
                             </div>
 
                             <hr>
-                            <div class="d-flex caracteristique mt-3">
-                                <div class="me-3">Film</div>
-                                <div class="me-3">Saison : <strong>2</strong></div>
-                                <div class="me-3">Nombre Episode : <strong>135</strong></div>
-                            </div>
-                            <div class="mt-3">
-                                <div class="w-100 text-warning film-genre">
-                                    <span>HISTOIRE</span>
-                                    <span>ACTION</span>
-                                    <span>COMEDIE</span>
-                                    <span>FRISSON</span>
-                                </div>
+                            <div class="caracteristique mt-3">
+                                <div class="me-3">Logiciel</div>
+                                <div class="me-3 mt-3 text-overflow-hidden text-warning">2 Go RAM | 65 Go ROM | NVIDIA 512</div>
                             </div>
 
-                            <div class="d-flex mt-4 mb-3">
+                            <div class="d-flex mt-4">
                                 <button class="btn btn-warning me-4 px-5">Modifier</button>
                                 <button class="btn btn-outline-secondary">Supprimer</button>
                             </div>
@@ -178,14 +155,12 @@
                     <a data-bs-toggle="modal" data-bs-target="#exampleModal">
                         <img src="../assets/images/cover-1.jpg" class="w-100" height="300" alt="">
                         <div class="d-flex justify-content-between align-items-end mt-3">
-                            <h4 class="mb-0 w-60 text-overflow-hidden">Cover versions</h4>
-                            <div class="film-type text-overflow-hidden">Dessin animé</div>
+                            <h4 class="mb-0 w-60 text-overflow-hidden">Autocad 2023</h4>
+                            <div class="film-type text-overflow-hidden">Logiciel</div>
                         </div>
                         <div class="film-categorie mt-2 d-flex">
-                            <div class="me-3">2024</div>
-                            <div class="me-3 w-40"><strong>Saison 2</strong></div>
                             <div class="me-3 text-overflow-hidden">
-                                ACTION | COMEDIE | HISTOIRE
+                                2 Go RAM | 65 Go ROM | NVIDIA 512
                             </div>
                         </div>
                     </a>
@@ -197,71 +172,12 @@
                     <a data-bs-toggle="modal" data-bs-target="#exampleModal">
                         <img src="../assets/images/cover-1.jpg" class="w-100" height="300" alt="">
                         <div class="d-flex justify-content-between align-items-end mt-3">
-                            <h4 class="mb-0 w-60 text-overflow-hidden">Cover versions</h4>
-                            <div class="film-type text-overflow-hidden">Dessin animé</div>
+                            <h4 class="mb-0 w-60 text-overflow-hidden">Blender 3D</h4>
+                            <div class="film-type text-overflow-hidden">Logiciel</div>
                         </div>
                         <div class="film-categorie mt-2 d-flex">
-                            <div class="me-3">2024</div>
-                            <div class="me-3 w-40"><strong>Saison 2</strong></div>
                             <div class="me-3 text-overflow-hidden">
-                                ACTION | COMEDIE | HISTOIRE
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-
-            <div class="col-md-3">
-                <div class="cover">
-                    <a data-bs-toggle="modal" data-bs-target="#exampleModal">
-                        <img src="../assets/images/cover-1.jpg" class="w-100" height="300" alt="">
-                        <div class="d-flex justify-content-between align-items-end mt-3">
-                            <h4 class="mb-0 w-60 text-overflow-hidden">Cover versions</h4>
-                            <div class="film-type text-overflow-hidden">Dessin animé</div>
-                        </div>
-                        <div class="film-categorie mt-2 d-flex">
-                            <div class="me-3">2024</div>
-                            <div class="me-3 w-40"><strong>Saison 2</strong></div>
-                            <div class="me-3 text-overflow-hidden">
-                                ACTION | COMEDIE | HISTOIRE
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-
-            <div class="col-md-3">
-                <div class="cover">
-                    <a data-bs-toggle="modal" data-bs-target="#exampleModal">
-                        <img src="../assets/images/cover-1.jpg" class="w-100" height="300" alt="">
-                        <div class="d-flex justify-content-between align-items-end mt-3">
-                            <h4 class="mb-0 w-60 text-overflow-hidden">Cover versions</h4>
-                            <div class="film-type text-overflow-hidden">Dessin animé</div>
-                        </div>
-                        <div class="film-categorie mt-2 d-flex">
-                            <div class="me-3">2024</div>
-                            <div class="me-3 w-40"><strong>Saison 2</strong></div>
-                            <div class="me-3 text-overflow-hidden">
-                                ACTION | COMEDIE | HISTOIRE
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-
-            <div class="col-md-3">
-                <div class="cover">
-                    <a data-bs-toggle="modal" data-bs-target="#exampleModal">
-                        <img src="../assets/images/cover-1.jpg" class="w-100" height="300" alt="">
-                        <div class="d-flex justify-content-between align-items-end mt-3">
-                            <h4 class="mb-0 w-60 text-overflow-hidden">Cover versions</h4>
-                            <div class="film-type text-overflow-hidden">Dessin animé</div>
-                        </div>
-                        <div class="film-categorie mt-2 d-flex">
-                            <div class="me-3">2024</div>
-                            <div class="me-3 w-40"><strong>Saison 2</strong></div>
-                            <div class="me-3 text-overflow-hidden">
-                                ACTION | COMEDIE | HISTOIRE
+                                2 Go RAM | 65 Go ROM | NVIDIA 512
                             </div>
                         </div>
                     </a>
