--- a/html/admin-dashboard.html
+++ b/html/admin-dashboard.html
@@ -48,18 +48,13 @@
             <i class="fas fa-video me-4"></i>
             <div class="link-name">Studio</div>
         </a>
-
-        <!-- FORMATION CATEGORY -->
-        <a class="sidebar-link-group" href="">
-            <div class="link-name">Formations</div>
+        <a class="sidebar-link" href="./langue-list.html">
+            <i class="fas fa-microphone me-4"></i>
+            <div class="link-name">Langue</div>
         </a>
-        <a class="sidebar-link" href="./formation-list.html">
-            <i class="fas fa-book-open me-4"></i>
-            <div class="link-name">Formation</div>
-        </a>
-        <a class="sidebar-link" href="./formation-categorie-list.html">
-            <i class="fas fa-book me-4"></i>
-            <div class="link-name">Catégorie</div>
+        <a class="sidebar-link" href="./pays-list.html">
+            <i class="far fa-flag me-4"></i>
+            <div class="link-name">Pays d'origine</div>
         </a>
 
         <!-- GAME CATEGORY -->
@@ -73,6 +68,19 @@
         <a class="sidebar-link" href="./plateforme-list.html">
             <i class="fas fa-tv me-4"></i>
             <div class="link-name">Plateforme</div>
+        </a>
+
+        <!-- FORMATION CATEGORY -->
+        <a class="sidebar-link-group" href="">
+            <div class="link-name">Formations</div>
+        </a>
+        <a class="sidebar-link" href="./formation-list.html">
+            <i class="fas fa-book-open me-4"></i>
+            <div class="link-name">Formation</div>
+        </a>
+        <a class="sidebar-link" href="./formation-categorie-list.html">
+            <i class="fas fa-book me-4"></i>
+            <div class="link-name">Catégorie</div>
         </a>
 
         <!-- LOGICIEL CATEGORY -->
@@ -139,6 +147,15 @@
                                 personnages.
                                 Sur terre, des soldats britanniques tentent de survivre sur la plage de Dunkerque,
                                 encerclés.
+                            </div>
+
+                            <div class="mt-3">
+                                <span class="me-4">
+                                    <i class="fas fa-flag me-2"></i> Madagascar
+                                </span>
+                                <span class="me-4">
+                                    <i class="fas fa-microphone me-2"></i> Français
+                                </span>
                             </div>
 
                             <hr>
