--- a/html/langue-list.html
+++ b/html/langue-list.html
@@ -96,7 +96,7 @@
     <!-- CONTENT -->
     <div class="content">
         <div class="d-flex justify-content-between align-items-center">
-            <h1>Liste des studios</h1>
+            <h1>Liste des langues</h1>
             <div>
                 <i class="fas fa-power-off"></i>
             </div>
@@ -104,7 +104,7 @@
         <hr>
         <div>
             <a href="" data-bs-toggle="modal" data-bs-target="#insertionModal"
-                class="btn btn-warning px-5 mt-3">Nouvelle studio</a>
+                class="btn btn-warning px-5 mt-3">Nouvelle langue</a>
         </div>
 
         <!-- MODAL INSERTION NOUVELLE ACTEUR -->
@@ -113,12 +113,12 @@
             <div class="modal-dialog film-about mw-50 modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h1 class="modal-title text-warning fs-5" id="insertionModalLabel">Nouvelle studio</h1>
+                        <h1 class="modal-title text-warning fs-5" id="insertionModalLabel">Nouvelle langue</h1>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <form class="form p-3">
                         <div class="mb-3">
-                            <label for="" class="form-label">Nom du studio</label>
+                            <label for="" class="form-label">Nom de la langue</label>
                             <input type="text" name="" class="form-control" id="">
                         </div>
                         <div class="mb-3">
@@ -137,7 +137,7 @@
             <div class="modal-dialog film-about mw-50 modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h1 class="modal-title text-warning fs-5" id="updateModalLabel">Modifier le studio</h1>
+                        <h1 class="modal-title text-warning fs-5" id="updateModalLabel">Modifier une langue</h1>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <form class="form p-3">
@@ -146,8 +146,8 @@
                             <input type="text" name="" class="form-control" value="2" disabled>
                         </div>
                         <div class="mb-3">
-                            <label for="" class="form-label">Nom du studio</label>
-                            <input type="text" name="" class="form-control" id="" value="Bolly Wood">
+                            <label for="" class="form-label">Nom de la langue</label>
+                            <input type="text" name="" class="form-control" id="" value="Anglais">
                         </div>
                        
                         <div class="mb-3">
@@ -164,14 +164,14 @@
             <thead>
                 <tr class="table-warning">
                     <td>ID</td>
-                    <td>Nom du studio</td>
+                    <td>Nom de la langue</td>
                     <td></td>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td class="w-25">#1</td>
-                    <td class="w-50">Tech Gasy Studio</td>
+                    <td class="w-50">Français</td>
                     <td class="w-25">
                         <div class="d-flex">
                             <a href="" class="me-5 text-warning" data-bs-toggle="modal" data-bs-target="#updateModal">
@@ -185,7 +185,7 @@
                 </tr>
                 <tr>
                     <td class="w-25">#2</td>
-                    <td class="w-50">Ankoay Studio</td>
+                    <td class="w-50">Anglais</td>
                     <td class="w-25">
                         <div class="d-flex">
                             <a href="" class="me-5 text-warning" data-bs-toggle="modal" data-bs-target="#updateModal">
