--- a/html/game-list.html
+++ b/html/game-list.html
@@ -48,18 +48,13 @@
             <i class="fas fa-video me-4"></i>
             <div class="link-name">Studio</div>
         </a>
-
-        <!-- FORMATION CATEGORY -->
-        <a class="sidebar-link-group" href="">
-            <div class="link-name">Formations</div>
+        <a class="sidebar-link" href="./langue-list.html">
+            <i class="fas fa-microphone me-4"></i>
+            <div class="link-name">Langue</div>
         </a>
-        <a class="sidebar-link" href="./formation-list.html">
-            <i class="fas fa-book-open me-4"></i>
-            <div class="link-name">Formation</div>
-        </a>
-        <a class="sidebar-link" href="./formation-categorie-list.html">
-            <i class="fas fa-book me-4"></i>
-            <div class="link-name">Catégorie</div>
+        <a class="sidebar-link" href="./pays-list.html">
+            <i class="far fa-flag me-4"></i>
+            <div class="link-name">Pays d'origine</div>
         </a>
 
         <!-- GAME CATEGORY -->
@@ -73,6 +68,19 @@
         <a class="sidebar-link" href="./plateforme-list.html">
             <i class="fas fa-tv me-4"></i>
             <div class="link-name">Plateforme</div>
+        </a>
+
+        <!-- FORMATION CATEGORY -->
+        <a class="sidebar-link-group" href="">
+            <div class="link-name">Formations</div>
+        </a>
+        <a class="sidebar-link" href="./formation-list.html">
+            <i class="fas fa-book-open me-4"></i>
+            <div class="link-name">Formation</div>
+        </a>
+        <a class="sidebar-link" href="./formation-categorie-list.html">
+            <i class="fas fa-book me-4"></i>
+            <div class="link-name">Catégorie</div>
         </a>
 
         <!-- LOGICIEL CATEGORY -->
