--- a/html/new-film.html
+++ b/html/new-film.html
@@ -50,18 +50,13 @@
             <i class="fas fa-video me-4"></i>
             <div class="link-name">Studio</div>
         </a>
-
-        <!-- FORMATION CATEGORY -->
-        <a class="sidebar-link-group" href="">
-            <div class="link-name">Formations</div>
+        <a class="sidebar-link" href="./langue-list.html">
+            <i class="fas fa-microphone me-4"></i>
+            <div class="link-name">Langue</div>
         </a>
-        <a class="sidebar-link" href="./formation-list.html">
-            <i class="fas fa-book-open me-4"></i>
-            <div class="link-name">Formation</div>
-        </a>
-        <a class="sidebar-link" href="./formation-categorie-list.html">
-            <i class="fas fa-book me-4"></i>
-            <div class="link-name">Catégorie</div>
+        <a class="sidebar-link" href="./pays-list.html">
+            <i class="far fa-flag me-4"></i>
+            <div class="link-name">Pays d'origine</div>
         </a>
 
         <!-- GAME CATEGORY -->
@@ -75,6 +70,19 @@
         <a class="sidebar-link" href="./plateforme-list.html">
             <i class="fas fa-tv me-4"></i>
             <div class="link-name">Plateforme</div>
+        </a>
+
+        <!-- FORMATION CATEGORY -->
+        <a class="sidebar-link-group" href="">
+            <div class="link-name">Formations</div>
+        </a>
+        <a class="sidebar-link" href="./formation-list.html">
+            <i class="fas fa-book-open me-4"></i>
+            <div class="link-name">Formation</div>
+        </a>
+        <a class="sidebar-link" href="./formation-categorie-list.html">
+            <i class="fas fa-book me-4"></i>
+            <div class="link-name">Catégorie</div>
         </a>
 
         <!-- LOGICIEL CATEGORY -->
@@ -125,6 +133,22 @@
                         <div class="col-md-6">
                             <label for="" class="form-label">Nombre episode</label>
                             <input type="number" class="form-control">
+                        </div>
+                    </div>
+                    <div class="mb-3 row">
+                        <div class="col-md-6">
+                            <label for="" class="form-label">Langue</label>
+                            <select name="" id="" class="form-select">
+                                <option value="">Français</option>
+                                <option value="">Anglais</option>
+                            </select>
+                        </div>
+                        <div class="col-md-6">
+                            <label for="" class="form-label">Pays d'origine</label>
+                            <select name="" id="" class="form-select">
+                                <option value="">France</option>
+                                <option value="">Belgique</option>
+                            </select>
                         </div>
                     </div>
                     <div class="mb-3">
